docs/lang.ebnf
program         ::= declaration* EOF ;

declaration     ::= fn_decl
                  | model_decl
                  | union_decl
                  | var_decl
                  | statement ;

fn_decl         ::= "fn" IDENT "(" param_list? ")" ("->" type)? block ;
param_list      ::= param ("," param)* ;
param           ::= "mut"? IDENT ":" type ;

model_decl      ::= "model" IDENT "{" (model_field | model_method)* "}" ;
model_field     ::= "let" IDENT ":" type ";" ;
model_method    ::= "static"? "fn" IDENT "(" param_list? ")" ("->" type)? block ;

union_decl      ::= "union" IDENT "{" union_variant* "}" ;
union_variant   ::= "let" IDENT ":" type ";" ;

var_decl        ::= "let" ("mut" | "const")? IDENT ( ":=" expr | ":" type ("=" expr)? ) ";" ;

statement       ::= print_stmt
                  | block
                  | if_stmt
                  | while_stmt
                  | for_stmt
                  | for_in_stmt
                  | match_stmt
                  | return_stmt
                  | expr_stmt ;

print_stmt      ::= ("print" | "print_err") "(" expr ")" ";" ;
block           ::= "{" declaration* "}" ;
if_stmt         ::= "if" expr block ("else" (if_stmt | block))? ;
while_stmt      ::= "while" expr block ;
for_stmt        ::= "for" "(" (var_decl | expr_stmt | ";") expr? ";" expr? ")" block ;
for_in_stmt     ::= "for" IDENT "in" expr block ;

match_stmt      ::= "match" expr "{" match_arm* "}" ;
match_arm       ::= (IDENT ("(" IDENT ")")? | "_") ":" statement ","? ;

return_stmt     ::= "return" expr? ";" ;
expr_stmt       ::= expr ";" ;

type            ::= type_base type_suffix* ;
type_base       ::= "(" type ")"
                  | closure_type
                  | "i64" | "f64" | "bool" | "string" | "void" | "any"
                  | IDENT ;

closure_type    ::= ("|" type_list? "|" | "||") "->" type ;
type_list       ::= type ("," type)* ;
type_suffix     ::= "[]" | "?" ;

expr            ::= assignment ;
assignment      ::= range_expr ("=" assignment)? ;
range_expr      ::= logical_or ((".." | "..=") logical_or)? ;
logical_or      ::= logical_and ("||" logical_and)* ;
logical_and     ::= bitwise_or ("&&" bitwise_or)* ;
bitwise_or      ::= bitwise_xor ("|" bitwise_xor)* ;
bitwise_xor     ::= bitwise_and ("^" bitwise_and)* ;
bitwise_and     ::= equality ("&" equality)* ;
equality        ::= comparison (("==" | "!=") comparison)* ;
comparison      ::= bitwise_shift (("<" | "<=" | ">" | ">=") bitwise_shift)* ;
bitwise_shift   ::= term (("<<" | ">>") term)* ;
term            ::= factor (("+" | "-") factor)* ;
factor          ::= cast_expr (("*" | "/" | "%") cast_expr)* ;
cast_expr       ::= unary ("as" type)* ;
unary           ::= ("!" | "-" | "~") cast_expr | call ;

call            ::= primary ("(" arg_list? ")" | "[" expr "]" | "." IDENT ("(" arg_list? ")")? | "::" IDENT)* ;
arg_list        ::= expr ("," expr)* ;

primary         ::= INT | FLOAT | STRING | FSTRING | BOOL | "nil"
                  | "this"
                  | closure_expr
                  | array_literal
                  | model_literal
                  | "spawn" expr
                  | "await" expr
                  | "yield" expr?
                  | IDENT
                  | "(" expr ")" ;

closure_expr    ::= ("|" param_list? "|" | "||") ("->" type)? block ;
array_literal   ::= "[" arg_list? "]" ;
model_literal   ::= IDENT "{" (field_init ("," field_init)*)? "}" ;
field_init      ::= IDENT ":" expr ;

INT             ::= [0-9]+ ;
FLOAT           ::= [0-9]+ "." [0-9]+ ;
STRING          ::= '"' [^"]* '"' ;
FSTRING         ::= 'f"' [^"]* '"' ; /* Internal expansion handles {} */
BOOL            ::= "true" | "false" ;
IDENT           ::= [a-zA-Z_][a-zA-Z0-9_]* ;
